<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/ic_notifications"
        android:title="Notifications"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_calendar"
        android:icon="@drawable/ic_today"
        android:title="Calendar"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_fullscreen"
        android:title="@string/action_fullscreen"
        app:showAsAction="never"/>

    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never"/>

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"/>

</menu>