<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.profile.personal_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/fragment_container"
            android:elevation="7dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/personal_detail_title"
                android:textColor="@color/colorText"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/fragment_container"
            android:elevation="7dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:elevation="10dp"
                android:src="@drawable/ic_menu_camera" />

            <TextView
                android:id="@+id/usernameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_nav_header"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dateFirstTimeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_first_time"
                android:textAlignment="center"
                android:textColor="@color/dateFirstTime"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/jobPersonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/job_person"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="2dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_work" />

                    <TextView
                        android:id="@+id/workDurationText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="false"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/imageView3"
                        android:text="@string/work_duration"
                        android:textColor="@color/black" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="2dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_domain" />

                    <TextView
                        android:id="@+id/jobPositionText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="false"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/imageView4"
                        android:text="@string/job_position"
                        android:textColor="@color/black" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="2dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_timegroup" />

                    <TextView
                        android:id="@+id/timegroupText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="false"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/imageView5"
                        android:text="@string/time_group"
                        android:textColor="@color/black" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="2dp">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_payroll" />

                    <TextView
                        android:id="@+id/payrollgroupText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="false"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/imageView6"
                        android:text="@string/payroll_group"
                        android:textColor="@color/black" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_menu_camera" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/superior"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/superior_name"
                        android:textColor="@color/black" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>